endpoints working (fixed buggy sql queries)
